# FeroxDB

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: feroxdb.proto
src/: cache.rs  cli.rs  lib.rs  types.rs
src/client/: grpc_get.rs  grpc_save.rs  grpc_set.rs  mod.rs  setup.rs
src/handlers/: cleanup.rs  get.rs  load.rs  mod.rs  save.rs  set.rs
src/server/: config.rs  mod.rs  service.rs  setup.rs
