[package]
name = "feroxdb"
version = "0.1.0"
edition = "2024"
description = "Fast. Persistent. In-memory. Key-Value store in Rust"
authors = ["Archana Vaideeswaran <archanav1929@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }

[[bin]]
name = "fox"
path = "src/bin/fox.rs"