[package]
name = "feroxdb"
version = "0.1.0"
edition = "2024"
description = "Fast. Persistent. In-memory. Key-Value store in Rust"
authors = ["Archana Vaideeswaran <archanav1929@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "*"
dotenvy = "0.15"   # loads .env files
envy = "0.4"       # deserializes env vars into a struct
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "*"

[[bin]]
name = "fox"
path = "src/bin/fox.rs"

